@@ -83,3 +83,17 @@ export class UTF16BETextBinEnc extends TextBinEnc
 	encodeBin(buff: ArrayBuffer): string;
 	decodeBin(str: string): Uint8Array;
 }
+
+export class CPPByteArrBinEnc extends TextBinEnc
+{
+	constructor();
+	encodeBin(buff: ArrayBuffer): string;
+	decodeBin(str: string): Uint8Array;
+}
+
+export class CPPTextBinEnc extends TextBinEnc
+{
+	constructor();
+	encodeBin(buff: ArrayBuffer): string;
+	decodeBin(str: string): Uint8Array;
+}
